--- a/footer.html
+++ b/footer.html
@@ -5,12 +5,7 @@
 
 <p> If you enjoyed this post, then don't miss out on any future posts by subscribing to my email newsletter. </p>
 
-<iframe id="beehiiv-form" src="https://embeds.beehiiv.com/9232d2a2-6e85-4beb-b8ed-1de94e9e4f01?slim=true" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent; height: 55px;"></iframe>
-
-
-<h3> Support my work with a coffee </h3>
-
-<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="jba1719Q" data-color="#06436e" data-emoji="☕"  data-font="Lato" data-text="Support me" data-outline-color="#ffffff" data-font-color="#ffffff" data-coffee-color="#FFDD00" data-height="40px" ></script>
+<iframe src="https://embeds.beehiiv.com/57c2bcd4-afa7-4d26-96c9-591a6689e54d?slim=true" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="margin: 0; border-radius: 0px !important; background-color: transparent;"></iframe>
 
 <h3> Share </h3>
 
